--- a/UltimateHackathonFramework/Views/ShellView.xaml
+++ b/UltimateHackathonFramework/Views/ShellView.xaml
@@ -3,10 +3,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Grid Background="White">
-        <TextBlock Text="Hello Caliburn Micro!"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   FontSize="20" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+            <ContentControl Grid.Column="0" Grid.Row="0" x:Name="ClientsViewModel"/>
+        <ContentControl Grid.Column="1" Grid.Row="0" x:Name="ResultsViewModel"/>
+        <ContentControl Grid.ColumnSpan="2" Grid.Row="1" x:Name="GameViewModel"/>
+
+        
     </Grid>
 
 </Window>
