--- a/UltimateHackathonFramework/Views/ResultsView.xaml
+++ b/UltimateHackathonFramework/Views/ResultsView.xaml
@@ -3,10 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Grid Background="White">
-        <TextBlock Text="Results"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   FontSize="20" />
+        <ContentPresenter x:Name="RoundResults"/>
     </Grid>
 
 </UserControl>
