--- a/UltimateHackathonFramework/Views/ClientsView.xaml
+++ b/UltimateHackathonFramework/Views/ClientsView.xaml
@@ -1,12 +1,43 @@
 <UserControl x:Class="UltimateHackathonFramework.ClientsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        >
 
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="./DataTemplates.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid Background="White">
-        <TextBlock Text="Clients"
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="10*"/>
+        </Grid.RowDefinitions>
+            <TextBlock Text="Clients" Grid.Row="0"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    FontSize="20" />
+        <ListBox Grid.Row="1"
+                SelectedItem="{Binding SelectedBotFromListOfAll, Mode=TwoWay}" ItemsSource="{Binding Bots, Mode=TwoWay}" />
+        <DockPanel Grid.Row="2" >
+                <Button x:Name="ScanForClients" Content="Scan" DockPanel.Dock="Left" />
+                <WrapPanel Orientation="Horizontal" DockPanel.Dock="Right">
+                <Button x:Name="AddBot" Content="v" />
+                <Button x:Name="RemoveBot" Content="^" />
+                </WrapPanel>
+            </DockPanel>
+        <TextBlock Text="Selected" Grid.Row="3"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   FontSize="20" />
+        <ListBox Grid.Row="4"
+                SelectedItem="{Binding SelectedBotFromSelectedList }" ItemsSource="{Binding SelectedBots}"/>
+        
     </Grid>
 
 </UserControl>
