--- a/UltimateHackathonFramework/Views/GameView.xaml
+++ b/UltimateHackathonFramework/Views/GameView.xaml
@@ -14,7 +14,7 @@
                    FontSize="20" />
             <Button x:Name="Start" Content="Start" />
         </StackPanel>
-        <ContentControl Grid.Column="1" Content="{Binding CommunicationViewModel}" />
+        <ContentControl Grid.Column="1" x:Name="CommunicationViewModel" />
     </Grid>
 
 </UserControl>
