--- a/UltimateHackathonFramework/Views/ClientsView.xaml
+++ b/UltimateHackathonFramework/Views/ClientsView.xaml
@@ -10,7 +10,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid Background="White">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="10*"/>
