--- a/UltimateHackathonFramework/Views/ResultsView.xaml
+++ b/UltimateHackathonFramework/Views/ResultsView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Grid Background="White">
+    <Grid>
         <ContentPresenter x:Name="RoundResults"/>
     </Grid>
 
