--- a/UltimateHackathonFramework/Views/ShellView.xaml
+++ b/UltimateHackathonFramework/Views/ShellView.xaml
@@ -1,8 +1,10 @@
-<Window x:Class="UltimateHackathonFramework.ShellView"
+<Controls:MetroWindow x:Class="UltimateHackathonFramework.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+>
 
-    <Grid Background="White">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
@@ -18,4 +20,4 @@
         
     </Grid>
 
-</Window>
+</Controls:MetroWindow>
