--- a/UltimateHackathonFramework/Views/ClientsView.xaml
+++ b/UltimateHackathonFramework/Views/ClientsView.xaml
@@ -1,7 +1,7 @@
 <UserControl x:Class="UltimateHackathonFramework.ClientsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        >
+        xmlns:cal="http://www.caliburnproject.org">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -23,7 +23,8 @@
                    HorizontalAlignment="Center"
                    FontSize="20" />
         <ListBox Grid.Row="1"
-                SelectedItem="{Binding SelectedBotFromListOfAll, Mode=TwoWay}" ItemsSource="{Binding Bots, Mode=TwoWay}" />
+                SelectedItem="{Binding SelectedBotFromListOfAll, Mode=TwoWay}" ItemsSource="{Binding Bots, Mode=TwoWay}"
+                 cal:Message.Attach="[Event MouseDoubleClick] = [Action ClickAddBot()]"/>
         <DockPanel Grid.Row="2" VerticalAlignment="Center" >
                 
                 <Grid DockPanel.Dock="Right">
@@ -41,7 +42,7 @@
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    FontSize="20" />
-        <ListBox Grid.Row="4"
+        <ListBox Grid.Row="4" cal:Message.Attach="[Event MouseDoubleClick] = [Action ClickRemoveBot()]"
                 SelectedItem="{Binding SelectedBotFromSelectedList }" ItemsSource="{Binding SelectedBots}"/>
         
     </Grid>
