--- a/UltimateHackathonFramework/Views/ResultsView.xaml
+++ b/UltimateHackathonFramework/Views/ResultsView.xaml
@@ -1,9 +1,18 @@
 <UserControl x:Class="UltimateHackathonFramework.ResultsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="./DataTemplates.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
-        <ContentPresenter x:Name="RoundResults"/>
+        <DockPanel>
+            <TextBlock Text="Results"/>
+            <TextBlock Text="{Binding RoundResults.Results}"/>
+        </DockPanel>
     </Grid>
 
 </UserControl>
