--- a/UltimateHackathonFramework/Views/CommunicationView.xaml
+++ b/UltimateHackathonFramework/Views/CommunicationView.xaml
@@ -5,17 +5,16 @@
 
     <Grid >
         <Grid.RowDefinitions>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="3*"/>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
             <TextBlock Text="Server" Grid.Row="0"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    FontSize="20" />
-        <TextBlock x:Name="Status" >
+        <TextBlock x:Name="Status" Grid.Row="3">
             <TextBlock.Style>
                 <Style BasedOn="{StaticResource {x:Type TextBlock}}" TargetType="{x:Type TextBlock}">
                     <Style.Triggers>
@@ -31,8 +30,8 @@
         </TextBlock>
         <TextBox Grid.Row="1" Text="{Binding IP}"/>
         <TextBox Grid.Row="2" Text="{Binding Port}" />
-        <Button Grid.Row="3" x:Name="StartListening" Content="Start"/>
-        <Button Grid.Row="4" x:Name="StopListening" Content="Stop" />
+        <!--<Button Grid.Row="3" x:Name="StartListening" Content="Start"/>
+        <Button Grid.Row="4" x:Name="StopListening" Content="Stop" />-->
 
         
     </Grid>
