--- a/UltimateHackathonFramework/App.xaml
+++ b/UltimateHackathonFramework/App.xaml
@@ -18,6 +18,15 @@
                         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Orange.xaml" />
                         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
                     </ResourceDictionary.MergedDictionaries>
+                    <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="{x:Type Button}">
+                        <Setter Property="Margin" Value="2" />
+                    </Style>
+                    <Style BasedOn="{StaticResource {x:Type TextBlock}}" TargetType="{x:Type TextBlock}">
+                        <Setter Property="Margin" Value="2" />
+                    </Style>
+                    <Style BasedOn="{StaticResource {x:Type TextBox}}" TargetType="{x:Type TextBox}">
+                        <Setter Property="Margin" Value="2" />
+                    </Style>
                 </ResourceDictionary>
 
             </ResourceDictionary.MergedDictionaries>
