--- a/UltimateHackathonFramework/Views/ClientsView.xaml
+++ b/UltimateHackathonFramework/Views/ClientsView.xaml
@@ -1,7 +1,8 @@
 <UserControl x:Class="UltimateHackathonFramework.ClientsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:cal="http://www.caliburnproject.org">
+        xmlns:cal="http://www.caliburnproject.org"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -12,10 +13,10 @@
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="25"/>
             <RowDefinition Height="10*"/>
             <RowDefinition Height="3*"/>
-            <RowDefinition Height="1*" />
+            <RowDefinition Height="25" />
             <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
             <TextBlock Text="Clients" Grid.Row="0"
