--- a/UltimateHackathonFramework/Views/GameView.xaml
+++ b/UltimateHackathonFramework/Views/GameView.xaml
@@ -1,23 +1,43 @@
 <UserControl x:Class="UltimateHackathonFramework.GameView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="./DataTemplates.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="0">
-            <TextBlock Text="Game"
+            <Grid.RowDefinitions>
+            <RowDefinition  SharedSizeGroup="GroupTitle"  Height="1*"/>
+        <RowDefinition Height="3*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Game" Grid.ColumnSpan="2" Height="25"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
-                   FontSize="20" />
-            <Button x:Name="Start" Content="Start single game" />
-            <Button x:Name="StartAll" Content="Play all" />
-            <Button x:Name="ResetPoints" Content="Reset points" />
-            <ComboBox x:Name="Modes" SelectedItem="{Binding SelectedMode}"/>
+                   FontSize="20" Grid.Row="0" />
+        <Grid Grid.Column="0" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Button Grid.Row="0" x:Name="Start" Content="Start single game" />
+            <Button Grid.Row="1" x:Name="StartAll" Content="Play all" />
+            <Button Grid.Row="2" x:Name="ResetPoints" Content="Reset points" />
+        </Grid>
+        <StackPanel Grid.Column="1" Grid.Row="1">
+            <ComboBox x:Name="x" ItemsSource="{Binding Games}" SelectedItem="{Binding SelectedGame}" Margin="2"/>
+            <ComboBox x:Name="Modes" SelectedItem="{Binding SelectedMode}" Margin="2"/>
+            
         </StackPanel>
-        <ContentControl Grid.Column="1" x:Name="CommunicationViewModel" />
+        <ContentControl Grid.Column="2" Grid.RowSpan="2" x:Name="CommunicationViewModel" />
     </Grid>
 
 </UserControl>
