--- a/UltimateHackathonFramework/Views/ShellView.xaml
+++ b/UltimateHackathonFramework/Views/ShellView.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      MinHeight="710"
         
 >
 
@@ -14,9 +15,9 @@
             <RowDefinition Height="4*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-            <ContentControl Grid.Column="0" Grid.Row="0" x:Name="ClientsViewModel"/>
-        <ContentControl Grid.Column="1" Grid.Row="0" x:Name="ResultsViewModel"/>
-        <ContentControl Grid.ColumnSpan="2" Grid.Row="1" x:Name="GameViewModel"/>
+            <ContentControl Grid.Column="0" Grid.Row="0" x:Name="ClientsViewModel" Margin="5"/>
+        <ContentControl Grid.Column="1" Grid.Row="0" x:Name="ResultsViewModel" Margin="5"/>
+        <ContentControl Grid.ColumnSpan="2" Grid.Row="1" x:Name="GameViewModel" Margin="5"/>
 
         
     </Grid>
