--- a/UltimateHackathonFramework/Views/DataTemplates.xaml
+++ b/UltimateHackathonFramework/Views/DataTemplates.xaml
@@ -8,7 +8,14 @@
 
 
     <DataTemplate DataType="{x:Type local:Bot}">
-        <TextBlock Text="{Binding Name}"  />
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="{Binding Name}" Grid.Column="0" />
+            <TextBlock Text="{Binding Points}" Grid.Column="1" />
+        </Grid>
     </DataTemplate>
     <DataTemplate DataType="{x:Type local:Game}">
         <TextBlock Text="{Binding Name}"  />
