--- a/UltimateHackathonFramework/Views/GameView.xaml
+++ b/UltimateHackathonFramework/Views/GameView.xaml
@@ -1,6 +1,7 @@
 <UserControl x:Class="UltimateHackathonFramework.GameView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             >
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -12,7 +13,8 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
             <RowDefinition  SharedSizeGroup="GroupTitle"  Height="1*"/>
