--- a/UltimateHackathonFramework/Views/ShellView.xaml
+++ b/UltimateHackathonFramework/Views/ShellView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                      MinHeight="710"
+         Title="SCK.NET"             MinHeight="710" Icon="..\Icon1.ico"
         
 >
 
